test/errors/error7.base
Expecting a ')' but got '*'
fun foo(*) {
         ^ 
